Fix Unaligned Items when zooming page

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 .dashboard {
     display: flex;
     flex-direction: row;
-    height: 100vh;
 }
 
 .sidebar {
